<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/outerPaddddding"
    tools:context=".add.AddActivity">

    <ImageButton
        android:id="@+id/AddAsanaFragment_backArrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/AddAsanaFragment_headline"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/AddAsanaFragment_headline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AddAsanaFragment_headline"
        app:srcCompat="@drawable/caret_left" />

    <TextView
        android:id="@+id/AddAsanaFragment_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/new_asana_headline"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/AddAsanaFragment_contentScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <ScrollView
        android:id="@+id/AddAsanaFragment_contentScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/AddAsanaFragment_abortButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddAsanaFragment_headline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/outerPaddddding"
            android:paddingRight="@dimen/outerPaddddding">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/AddAsanaFragment_imageRecycler"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layoutManager='androidx.recyclerview.widget.LinearLayoutManager'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/create_image_button">

            </androidx.recyclerview.widget.RecyclerView>

            <de.frejaundalex.elementsequencing.view.ElementSelection
                android:id="@+id/AddAsanaFragment_element_selection"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintBottom_toTopOf="@+id/AddAsanaFragment_nameInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AddAsanaFragment_imageRecycler" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AddAsanaFragment_nameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/create_asana_name"
                app:layout_constraintBottom_toTopOf="@+id/AddAsanaFragment_sanskritInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AddAsanaFragment_element_selection">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddAsanaFragment_nameInput"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AddAsanaFragment_sanskritInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/create_sanskrit_name"
                app:layout_constraintBottom_toTopOf="@id/AddAsanaFragment_difficulty"
                app:layout_constraintEnd_toEndOf="@+id/AddAsanaFragment_nameInputLayout"
                app:layout_constraintStart_toStartOf="@+id/AddAsanaFragment_nameInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/AddAsanaFragment_nameInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddAsanaFragment_sanskritInput"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <de.frejaundalex.elementsequencing.view.DifficultyBar
                android:id="@+id/AddAsanaFragment_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@id/AddAsanaFragment_notesInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/AddAsanaFragment_nameInputLayout"
                app:layout_constraintStart_toStartOf="@+id/AddAsanaFragment_nameInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/AddAsanaFragment_sanskritInputLayout" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AddAsanaFragment_notesInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/add_asana_notes_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/AddAsanaFragment_nameInputLayout"
                app:layout_constraintStart_toStartOf="@+id/AddAsanaFragment_nameInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/AddAsanaFragment_nameInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/AddAsanaFragment_notesInput"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/AddAsanaFragment_abortButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/create_book_abort"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="@+id/AddAsanaFragment_saveButton"
        app:layout_constraintEnd_toStartOf="@+id/AddAsanaFragment_saveButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AddAsanaFragment_saveButton" />


    <Button
        android:id="@+id/AddAsanaFragment_saveButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_book_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AddAsanaFragment_abortButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
